# Bitcoin-Digital-Labor-Derivative

./: .env.example  .gitignore  ANALYSIS.md  CHANGELOG.md  CITATION.cff  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  LAYMANS_EXPLANATION.md  LICENSE  PAPER.md  README.md  RENDER_DEPLOYMENT.md
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  SECURITY.md
examples/: api_demo.sh  global_node_usage.rs
src/: alerts.rs  bitcoin_core_chain.rs  economic_oracle.rs  lib.rs  prelude.rs  rbi_engine.rs  sqlite_participant_registry.rs  utxo_scoring.rs  velocity_analyzer.rs  velocity_config.rs
src/api/: handlers.rs  mod.rs  node.rs  server.rs  types.rs
src/simulation/: invariants.rs  mod.rs  report.rs  scenarios.rs  state.rs  step.rs
tests/: registry_sybil.rs  simulation_determinism.rs
