[package]
name = "bitcoin-digital-labor-derivative"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Deterministic economic core and simulation framework for Bitcoin Digital Labor Derivative"
authors = ["Don Feeney"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "sim"
path = "src/bin/sim.rs"

[[bin]]
name = "api-server"
path = "src/bin/api_server.rs"
required-features = ["api"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcoin = "0.30"
rust_decimal = "1.34"

# Optional but already implied by current code usage
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# SQLite registry likely needs this
rusqlite = { version = "0.30", features = ["bundled"] }

# Optional dependencies for the rpc feature
bitcoincore-rpc = { version = "0.17", optional = true }
tracing = { version = "0.1", optional = true }

# REST API dependencies
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"

[features]
rpc = ["bitcoincore-rpc", "tracing"]
api = ["axum", "tokio", "tower", "tower-http", "tracing", "tracing-subscriber"]
